--- a/npkpir_23/web/sub/dialog_nowasprawa.xhtml
+++ b/npkpir_23/web/sub/dialog_nowasprawa.xhtml
@@ -7,7 +7,7 @@
     xmlns:ui="http://java.sun.com/jsf/facelets"
     xmlns:ft="http://primefaces.prime.com.tr/facestrace">
     <p:dialog id="dialog_nowasprawa" header="Sprawy do załatwienia" widgetVar="dialog_nowasprawa"
-              resizable="false" onShow="ustawdialogWindow('dialog_nowasprawa', 1200, 190);"
+              resizable="false" onShow="ustawdialogWindow('dialog_nowasprawa', 1400, 190);"
               closeOnEscape="true" onHide="resetujdialog('dialog_nowasprawa');"  >
               <h:form id="form_dialog_nowasprawa">
                   <p:growl ><p:autoUpdate/></p:growl>
@@ -38,7 +38,7 @@
                           <p:column width="100">
                               <p:selectOneMenu value="#{sprawaView.nowa.odbiorca}" converter="#{uzConv}">
                                   <f:selectItem itemLabel="wybierz" itemValue="" noSelectionOption="true"/>
-                                  <f:selectItems value="#{sprawaView.odbiorcy}" var="item1" itemLabel="#{item1.login}" itemValue="#{item1}"/>
+                                  <f:selectItems value="#{sprawaView.odbiorcy}" var="item1" itemLabel="#{item1.nazwiskoImie}" itemValue="#{item1}"/>
                               </p:selectOneMenu>
                           </p:column>
                           <p:column>
@@ -47,27 +47,25 @@
                           <p:column>
                               <p:selectOneMenu value="#{sprawaView.nowa.klient}" style="width: 150px;" converter="#{podatConv}">
                                   <f:selectItem itemLabel="wybierz" itemValue="" noSelectionOption="true"/>
-                                  <f:selectItems value="#{sprawaView.klienci}" var="item2" itemLabel="#{item2.nazwapelna}" itemValue="#{item2}"/>
+                                  <f:selectItems value="#{sprawaView.klienci}" var="item2" itemLabel="#{item2.printnazwa}" itemValue="#{item2}"/>
                               </p:selectOneMenu>
                           </p:column>
                           <p:column>
                               <p:selectOneMenu value="#{sprawaView.nowa.organ}">
                                   <f:selectItem itemLabel="wybierz" itemValue="" noSelectionOption="true"/>
                                   <f:selectItem itemLabel="US" itemValue="US"/>
-                                  <f:selectItem itemLabel="I US" itemValue="I US"/>
-                                  <f:selectItem itemLabel="II US" itemValue="II US"/>
-                                  <f:selectItem itemLabel="III US" itemValue="III US"/>
-                                  <f:selectItem itemLabel="UC" itemValue="UC"/>
-                                  <f:selectItem itemLabel="PIP" itemValue="PIP"/>
                                   <f:selectItem itemLabel="ZachUs" itemValue="ZachUs"/>
                                   <f:selectItem itemLabel="ZUS" itemValue="ZUS"/>
+                                  <f:selectItem itemLabel="Finanzamt" itemValue="ZUS"/>
+                                  <f:selectItem itemLabel="SOKA" itemValue="ZUS"/>
+                                  <f:selectItem itemLabel="Urząd Miasta" itemValue="US"/>
                               </p:selectOneMenu>
                           </p:column>
                           <p:column>
                               <p:selectOneMenu value="#{sprawaView.nowa.waznosc}">
                                   <f:selectItem itemLabel="wybierz" itemValue="" noSelectionOption="true"/>
                                   <f:selectItem itemLabel="na wczoraj" itemValue="na wczoraj"/>
-                                  <f:selectItem itemLabel="istotne" itemValue="istotne"/>
+                                  <f:selectItem itemLabel="klient prosił" itemValue="istotne"/>
                                   <f:selectItem itemLabel="do zrobienia" itemValue="do zrobienia"/>
                                   <f:selectItem itemLabel="nie spieszy się" itemValue="nie spieszy się"/>
                               </p:selectOneMenu>
