--- a/npkpir_23/web/ksiegowa/sub/dokument_wpis.xhtml
+++ b/npkpir_23/web/ksiegowa/sub/dokument_wpis.xhtml
@@ -224,7 +224,7 @@
                     </p:column>
                 </p:row>
             </p:panelGrid>
-            <p:commandButton id="dodajopis" value="ok" actionListener="#{Opis.dodajOpis}" style="display: none;"/>
+            <p:commandButton id="dodajopis" value="ok" actionListener="#{opis.dodajOpis}" style="display: none;"/>
             <!--        <span id="log"></span>-->
             <!-- kolumny podatkowej ksiegi przychodow i rozchodow-->
             <p:panelGrid columns="2" style="width: 855px;" columnClasses="forty-percent, sixty-percent">
