--- a/npkpir_23/web/ksiegowa/ksiegowaImportCis.xhtml
+++ b/npkpir_23/web/ksiegowa/ksiegowaImportCis.xhtml
@@ -21,7 +21,7 @@
                          <h:outputText value="import dokumentów z pliku JSON AMAZON"/>
                         <h:form>
                             
-                            <p:fileUpload fileUploadListener="#{importCisView.importujsprzedaz}" 
+                            <p:fileUpload listener="#{importCisView.importujsprzedaz}" 
                                           mode="advanced" dragDropSupport="true" fileLimit="1" auto="true"
                                           update="messages1 importtabela" sizeLimit="4000000"  
                                           validatorMessage="Nieprawidłowy typ pliku" invalidFileMessage="Nieprawidłowy typ pliku" invalidSizeMessage="Plik za duży"
