--- a/npkpir_23/web/wspolny/sub/fakturarozrach/faktura_import.xhtml
+++ b/npkpir_23/web/wspolny/sub/fakturarozrach/faktura_import.xhtml
@@ -36,7 +36,7 @@
             <p:panelGrid  columns="2" columnClasses="sixty-percent forty-percent" rendered="false" binding="#{bankImportKsiazkaView.grid0}">
                     <p:panelGrid columns="1" style="margin-top: 20px;margin-bottom: 10px;">
                         <h:outputText value="plik/pliki CSV/XML z dokumentami źródłowymi " style="font-weight: bold;"/>
-                        <p:fileUpload fileUploadListener="#{bankImportKsiazkaView.zachowajplik}" auto="true"
+                        <p:fileUpload listener="#{bankImportKsiazkaView.zachowajplik}" auto="true"
                                       mode="advanced" dragDropSupport="true" multiple="true"
                                       update="messages1" sizeLimit="10000000"   
                                       fileLimitMessage="Można załadować tylko jeden plik na jedno ładowanie"
