--- a/npkpir_23/web/wspolny/sub/importxls.xhtml
+++ b/npkpir_23/web/wspolny/sub/importxls.xhtml
@@ -21,7 +21,7 @@
        <p:panelGrid columns="2" columnClasses="sixty-percent forty-percent"  binding="#{interpaperImportView.grid0}" >
                     <p:panelGrid columns="1" style="margin-top: 20px;">
                         <h:outputText value="Akceptowana wersja pliku xls,xlsx,xml,epp, csv" style="font-weight: bold;"/>
-                        <p:fileUpload fileUploadListener="#{interpaperImportView.zachowajplik}" 
+                        <p:fileUpload listener="#{interpaperImportView.zachowajplik}" 
                                       mode="advanced" dragDropSupport="true" multiple="true" sequential="true" auto="true"
                                       update="messages2 panelprzyciskow akordeon5:form_importinterpaper panelplik:rodzajrach" 
                                       invalidSizeMessage="Plik za duży" allowTypes="/(\.|\/)(csv|xls|xml|xlsx|epp)$/" invalidFileMessage="Niewłaściwy format pliku: "
